# local-agent

./: .gitignore  README.md
agent/: .gitignore  TODO.md  agent_loop.py  agent_server.py  config.py  pyproject.toml  start_LA.sh  voice.py
agent/bus/: __init__.py  redis_delegate.py  redis_publisher.py  redis_router.py  redis_task_queue.py
agent/cli/: __init__.py  la.sh  la_cli.py  la_client.py  la_commands.py  la_tui.py  redis_client.py  repl.py
agent/configs/: agent1.yaml  agent2.yaml  agent3.yaml  agentlocal.yaml  config_global.yaml  subagent1.yaml  subagent2.yaml
agent/context/: context_agent1.json  context_agent3.json  context_loader.py  payload_builder.py
agent/core/: core_utils.py  gpu_manager.py  log_manager.py  logging_config.py  router.py  session_manager.py
agent/core/templates/: cron_report_template.md.j2  (+5 more)
agent/dashboard/: chat.py  config_agents.py  dashboard.py  pages.py  styles.py
agent/llm/: instructor_guard.py  llm_client.py  tool_registry.py
agent/mcp/: obscura.md
agent/security/: __init__.py  command_blacklist.py  firejail_sandbox.py  net_guard.py  plumbum_shell.py  psutil_guard.py  safe_path.py  zombie_killer.py
agent/telegram_router/: config.yaml  router_daemon.py  slash_commands_map.py
agent/tools/: codegraph_explore.py  comfyui_manage.py  cron_manage.py  execute_terminal.py  file_manage.py  gpu_manage.py  image_scale.py  log_view.py  mcp_call.py  memory_manage.py  network_manage.py  project_manage.py  session_manage.py  skill_manage.py  sqlite_query.py  system_manage.py  todo_manage.py  triposr_3d.py  vision.py
