[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent"
version = "0.1.0"
description = "Système multi-agents atomique, léger et robuste"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Moussa"}]

dependencies = [
    # Inférence & parsing
    "litellm>=1.50",
    "httpx>=0.27",
    "instructor>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",

    # UI — dashboard
    "streamlit>=1.30",

    # Bus & orchestration — Redis (remplace ZMQ + Huey)
    "redis>=5.0",
    "honcho>=1.1",
    "watchfiles>=0.21",

    # Telegram
    "aiogram>=3.0",
    "telegramify-markdown>=1.0",

    # Robustesse & sécurité
    "tenacity>=8.0",
    "plumbum>=1.8",
    "psutil>=5.9",
    "filelock>=3.0",

    # CLI & visuel
    "click>=8.1",
    "rich>=13.0",

    # Orchestration FOSS
    "pluggy>=1.4",
    "jinja2>=3.1",
    "tinydb>=4.8",

    # Cache & env
    "diskcache>=5.6",
    "python-dotenv>=1.0",
]

[project.scripts]
la = "la_cli:main"